# qadence

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  coverage.json  draw.py  mkdocs.yml  pyproject.toml  readthedocs.yml  renovate.json  setup.py  test.py  versions.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  new-feature.yml
.github/workflows/: build_deploy_docs.yml  build_docs.yml  debug.yml  dependabot.yml  lint.yml  publish.yml  test.yml  test_all.yml  test_docs.yml  test_examples.yml  test_examples_notebooks.yml  test_fast.yml  test_notebooks.yml
0.0.1debug/: 404.html  index.html  sitemap.xml
0.0.1debug/CODE_OF_CONDUCT/: index.html
0.0.1debug/CONTRIBUTING/: index.html
0.0.1debug/models/: index.html
0.0.1debug/qml/: index.html
0.0.1debug/search/: search_index.json
docs/: Dockerfile  environment.yml  getting_started.md  index.md  models.md  qadence.md  requirements.txt
docs/advanced_tutorials/: custom-models.md  differentiability.md  index.md  profiling-and-debugging  projectors.md  vqe.md
docs/api/: blocks.md  constructors.md  execution.md  ml_tools.md  models.md  noise.md  pasqal_cloud_connection.md  serialization.md
docs/backends/: backend.md  differentiable.md  pulser.md
docs/content/: backends.md  block_system.md  noisy_simulation.md  parameters.md  qml_constructors.md  quantummodels.md  register.md  state_conventions.md  state_init.md  time_dependent.md
docs/css/: colors.css  home.css  mkdocstrings.css
docs/development/: architecture.md  contributing.md  draw.md
docs/digital_analog_qc/: analog-basics.md  analog-qcl.md  analog-qubo.md  daqc-basics.md  daqc-cnot.md  daqc-qft.md  index.md  pulser-basic.md  rydberg-hea.md  semi-local-addressing.md
docs/getting_started/: LICENSE.md  installation.md
docs/home/: home.html
docs/overrides/: home.html
docs/qadence/: blocks.md  constructors.md  draw.md  ml_tools.md  models.md  operations.md  parameters.md  quantumcircuit.md  register.md  states.md  transpile.md  types.md
docs/qml/: index.md  ml_tools.md  qaoa.md  qcl.md  qml_constructors.md  qml_tools.md
docs/realistic_sims/: errors.md  measurements.md  mitigation.md  noise.md
docs/tutorials/: backends.md  getting_started.md  hamiltonians.md  index.md  ml_tools.md  overlap.md  (+8 more)
examples/: adjoint_demo.ipynb  adjoint_demo.py  draw.py  equivariant_generators.py  qcl_with_extremization.py  quick_start.py  test.ipynb
latest/: 404.html  index.html
qadence/: __init__.py  _extensions.py~~  backend.py  circuit.py  composer.py  decompose.py  divergences.py  execution.py  extensions.py  finitediff.py  libs.py  log_config.yaml  logger.py  model.py  noise.py  operations.py  overlap.py  parameters.py  pasqal_cloud_connection.py  protocols.py  quantum_model.py  qubit_support.py  register.py  serial_expr_grammar.peg  serialization.py  states.py  tree.py  types.py  utils.py
test/: test.ipynb
tests/: conftest.py  metrics.py  strategies.py  test_divergences.py  test_examples.py  test_execution.py  test_finitediff.py  test_memory.py  test_notebooks.py  test_pasqal_cloud_connection.py  test_serialize.py  test_str_utils.py  test_sympy_blocks.py  test_test.py  test_utils.py  test_whitepaper.py
v0.9.2/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  docsutils.py  index.html  objects.inv  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.3/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.4/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.5/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.6/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.10.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.10.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.10.3/: 404.html  index.html  objects.inv  sitemap.xml
v1.11.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.11.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.11.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.11.3/: 404.html  index.html  objects.inv  sitemap.xml
v1.11.4/: 404.html  index.html  sitemap.xml
v1.11.5/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.1/: 404.html  index.html  sitemap.xml
v1.2.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.3/: 404.html  environment.yml  index.html  objects.inv  sitemap.xml
v1.2.4/: 404.html  index.html  sitemap.xml
v1.2.5/: 404.html  index.html  objects.inv  sitemap.xml
v1.2.6/: 404.html  index.html  sitemap.xml
v1.2.7/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.4.1/: 404.html  index.html  sitemap.xml
v1.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.5.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.5.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.6.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.6.2/: 404.html  index.html  objects.inv  sitemap.xml
v1.6.3/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.2/: 404.html  index.html  sitemap.xml
v1.7.3/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.4/: 404.html  index.html  sitemap.xml
v1.7.5/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.6/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.7/: 404.html  index.html  objects.inv  sitemap.xml
v1.7.8/: 404.html  index.html  objects.inv  sitemap.xml
v1.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.9.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.9.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.9.2/: 404.html  index.html  objects.inv  sitemap.xml
(+3547 files in other folders)
