[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qadence"
description = "Pasqal interface for circuit-based quantum computing SDKs"
readme = "README.md"
authors = [
    { name = "Aleksander Wennersteen", email = "aleksander.wennersteen@pasqal.com" },
    { name = "Gert-Jan Both", email = "gert-jan.both@pasqal.com" },
    { name = "Niklas Heim", email = "niklas.heim@pasqal.com" },
    { name = "Mario Dagrada", email = "mario.dagrada@pasqal.com" },
    { name = "Vincent Elfving", email = "vincent.elfving@pasqal.com" },
    { name = "Dominik Seitz", email = "dominik.seitz@pasqal.com" },
    { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
    { name = "Joao P. Moutinho", email = "joao.moutinho@pasqal.com" },
    { name = "Vytautas Abramavicius", email = "vytautas.abramavicius@pasqal.com" },
    { name = "Gergana Velikova", email = "gergana.velikova@pasqal.com" },
    { name = "Eduardo Maschio", email = "eduardo.maschio@pasqal.com" },
    { name = "Smit Chaudhary", email = "smit.chaudhary@pasqal.com" },
]
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
version = "1.7.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "torch",
    "openfermion",
    "sympytorch>=0.1.2",
    "rich",
    "tensorboard>=2.12.0",
    "deepdiff",
    "jsonschema",
    "nevergrad",
    "scipy",
    "pyqtorch==1.2.1",
    "pyyaml",
    "matplotlib",
    "Arpeggio==2.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

[project.optional-dependencies]
pulser = [
    "pulser-core==0.18.1",
    "pulser-simulation==0.18.1",
    "pasqal-cloud==0.10.1",
]
braket = ["amazon-braket-sdk<1.71.2"]
visualization = [
    "graphviz",
    # FIXME: will be needed once we support latex labels
    # "latex2svg @ git+https://github.com/Moonbase59/latex2svg.git#egg=latex2svg",
    # "scour",
]
horqrux = [
    "horqrux==0.6.0",
    "jax",
    "flax",
    "optax",
    "jaxopt",
    "einops",
    "sympy2jax",
]
protocols = ["qadence-protocols"]
libs = ["qadence-libs"]
dlprof = ["nvidia-pyindex", "nvidia-dlprof[pytorch]"]
all = ["pulser", "braket", "visualization", "protocols", "libs"]

[tool.hatch.envs.default]
dependencies = [
    "flaky",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-xdist",
    "types-PyYAML",
    "ipykernel",
    "pre-commit",
    "black",
    "isort",
    "ruff",
    "pydocstringformatter",
]
features = ["pulser", "braket", "visualization", "horqrux"]

[tool.hatch.envs.default.scripts]
test = "pytest -n auto --cov-report lcov --cov-config=pyproject.toml --cov=qadence --cov=tests --ignore=./tests/test_examples.py {args}"
test-examples = "pytest ./tests/test_examples.py {args}"
no-cov = "cov --no-cov {args}"
test-docs = "mkdocs build --clean --strict"
test-all = "pytest -n auto {args}  && mkdocs build --clean --strict"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
addopts = """-vvv"""
xfail_strict = true
filterwarnings = [
    "ignore:Call to deprecated create function FieldDescriptor",
    "ignore:Call to deprecated create function Descriptor",
    "ignore:Call to deprecated create function EnumDescriptor",
    "ignore:Call to deprecated create function EnumValueDescriptor",
    "ignore:Call to deprecated create function FileDescriptor",
    "ignore:Call to deprecated create function OneofDescriptor",
    "ignore:distutils Version classes are deprecated.",
    "ignore::DeprecationWarning",
]


[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-section-index",
    "mkdocs-exclude",
    "markdown-exec",
    "mike",
]
features = ["pulser", "braket", "horqrux", "visualization"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310"]

[tool.hatch.envs.tests]
features = ["all"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.gitignore",
    "/.gitlab-ci-yml",
    "/.pre-commit-config.yml",
    "/tests",
    "/docs",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["qadence"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
select = ["E", "F", "I", "Q"]
extend-ignore = ["F841", "F403"]
line-length = 100

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"qadence/operations/primitive.py" = [
    "E742",
] # Avoid ambiguous class name warning for identity.
"qadence/backends/horqrux/convert_ops.py" = [
    "E741",
] # Avoid ambiguous class name warning for 0.
"examples/*" = ["E402"] # Allow torch seed to be set before qadence imports

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
